--- a/index.html
+++ b/index.html
@@ -1,37 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/common.css">
-  <link rel="stylesheet" href="./css/index.css">
-  <title>Document</title>
-</head>
-<body>
-  <nav>
-    <h1 class="logo">
-      <a href="#">LOGO</a>
-    </h1>
-    <ul class="nav">
-      <li class="nav-item">
-        <a href="#">Blanding</a>
-      </li>
-      <li class="nav-item">
-        <a href="#">Analysis</a>
-      </li>
-    </ul>
-  </nav>
-  <main>
-    <section id="banner-section">section1</section>
-    <section id="intro-section">
-      <div class="main-text">
-        <h2>main text main text main text</h2>
-        <h2>main text main text main text</h2>
-      </div>
-    </section>
-    <section id="searching-section">section3</section>
-  </main>
-  <footer>footer</footer>
-  <script src="./js/index.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/common.css" />
+    <link rel="stylesheet" href="./css/index.css" />
+    <title>Document</title>
+  </head>
+  <body>
+    <nav>
+      <h1 class="logo">
+        <a href="#">LOGO</a>
+      </h1>
+      <ul class="nav">
+        <li class="nav-item">
+          <a href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a href="#">Comming Soon</a>
+        </li>
+      </ul>
+    </nav>
+    <main>
+      <section id="banner-section">
+        <div class="video-cover"></div>
+        <div class="video">
+          <video width="100%" height="100%" controls>
+            <source
+              src="./assets/video/submarines_in_world_of_warships.mp4"
+              type="video/mp4"
+            />
+            Your browser does not support the video tag.
+          </video>
+        </div>
+      </section>
+      <section id="intro-section">
+        <div class="main-text">
+          <h2>Enjoy your own ship</h2>
+          <h2>in the great sea battle.</h2>
+        </div>
+        <div class="sub-text">
+          <p>Check your skills in the game!</p>
+          <p>Try to improve your skills.</p>
+        </div>
+      </section>
+      <section id="searching-section">
+        <h2 class="section-title">Search for analysis</h2>
+        <div class="search-bar">
+          <div class="search">
+            <input type="text" placeholder="Search id..." />
+            <span id="searching">search</span>
+          </div>
+          <!-- <ul class="search-list">
+            <li>1</li>
+            <li>2</li>
+            <li>3</li>
+          </ul> -->
+        </div>
+      </section>
+    </main>
+    <footer>@copyright. 2021.</footer>
+    <script src="./js/index.js"></script>
+  </body>
 </html>
