--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="search-bar">
           <div class="search">
             <input type="text" placeholder="Search id..." />
-            <span id="searching">search</span>
+            <button id="searching">search</button>
           </div>
           <!-- <ul class="search-list">
             <li>1</li>
