--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/common.css" />
-    <link rel="stylesheet" href="./css/index.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>Document</title>
   </head>
   <body>
@@ -13,12 +12,15 @@
         <a href="#">LOGO</a>
       </h1>
       <ul class="nav">
-        <li class="nav-item">
-          <a href="#">Home</a>
+        <!-- <li class="nav-item">
+          <a href="#banner-section">Video</a>
         </li>
         <li class="nav-item">
-          <a href="#">Comming Soon</a>
+          <a href="#intro-section">Introduce</a>
         </li>
+        <li class="nav-item">
+          <a href="#searching-section">Search</a>
+        </li> -->
       </ul>
     </nav>
     <main>
@@ -60,6 +62,6 @@
       </section>
     </main>
     <footer>@copyright. 2021.</footer>
-    <script src="./js/index.js"></script>
+    <script src="./js/app.js"></script>
   </body>
 </html>
